Style: target img tags with css to avoid stretching

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,9 @@ hr {
     min-height: 500px;
     font-size: 1.5rem;
 }
+.card img{
+    object-fit: cover;
+}
 
 /*-----------------Features section styles--------------*/
 
